Bug 78953 - crash after formatting odg layer from within impress
Summary: crash after formatting odg layer from within impress
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.6.2 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: (target:4.3.0) target:4.2.6
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-20 10:20 UTC by Juang Dse
Modified: 2015-02-19 15:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
presentation with embedded ole object (16.48 KB, application/vnd.oasis.opendocument.presentation)
2014-05-22 15:25 UTC, Juang Dse
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juang Dse 2014-05-20 10:20:35 UTC
Steps to reproduce:

1. Start empty presentation
2. Insert - Object - OLE Object (Create from file)
3. Choose some odg file.
4. Double-click the new OLE object.
5. Format - Layer

Crash.
Comment 1 retired 2014-05-22 13:39:10 UTC
Could you attach a test case with all the file required to reproduce the issue please. After that set the bug back to Unconfirmed. Thanks.
Comment 2 Juang Dse 2014-05-22 15:25:26 UTC
Created attachment 99590 [details]
presentation with embedded ole object
Comment 3 Firas Hanife 2014-05-27 21:11:06 UTC
Reproduced with the attached document on openSUSE 13.1 with
4.1.6.2 and 4.2.4.2
Comment 4 Julien Nabet 2014-05-30 22:18:06 UTC
On pc Debian x86-64 with 4.2 sources updated 2 days ago, I could reproduce this.
part of bt:
Program received signal SIGSEGV, Segmentation fault.
Python Exception <class 'gdb.MemoryError'> Cannot access memory at address 0x8: 
0x00002aaac8206e80 in rtl::OUString::OUString (this=0x7fffffff0270, str=<error reading variable: Cannot access memory at address 0x8>)
    at /home/julien/compile-libreoffice/libo_4_2/include/rtl/ustring.hxx:105
105	        pData = str.pData;
(gdb) bt
Python Exception <class 'gdb.MemoryError'> Cannot access memory at address 0x8: 
#0  0x00002aaac8206e80 in rtl::OUString::OUString (this=0x7fffffff0270, str=<error reading variable: Cannot access memory at address 0x8>)
    at /home/julien/compile-libreoffice/libo_4_2/include/rtl/ustring.hxx:105
#1  0x00002aaac86b9fb6 in sd::DrawViewShell::FuTemporary (this=0x331f280, rReq=...) at /home/julien/compile-libreoffice/libo_4_2/sd/source/ui/view/drviews2.cxx:1551
#2  0x00002aaac86f6225 in SfxStubGraphicViewShellFuTemporary (pShell=0x331f280, rReq=...)

With master sources updated today, I can't reproduce this.
Comment 5 Julien Nabet 2014-05-30 22:22:59 UTC
Caolan/Thorsten: this commit http://cgit.freedesktop.org/libreoffice/core/commit/?id=b1cf64fe51fd0bb1e9bc8c3bb38d5cc7254d8d5f fixed the problem from 4.3
Is there something we could do for 4.2 branch?
(my previous comment shows a part of bt but I can attach the whole of it if needed)
Comment 6 Caolán McNamara 2014-06-05 14:13:26 UTC
submitted for 4-2 as https://gerrit.libreoffice.org/9654

I'll mark this as closed seeing as its fixed in master
Comment 7 Commit Notification 2014-06-05 21:34:02 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b4c090d8e6ad7727fc5a0399349b9ed0b5ff75f2&h=libreoffice-4-2

Resolves: fdo#78953 secured usage of LayerTabBar in Draw...


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.