Resolves: fdo#78953 secured usage of LayerTabBar in Draw...

was #i87182# secured usage of LayerTabBar in Draw...

ensured initialization when used as OLE

(cherry picked from commit 903afaa8ea0766e01ba41a227d2794c2c40b129a)

Conflicts:
	sd/source/ui/accessibility/AccessibleDocumentViewBase.cxx
	sd/source/ui/view/drviews3.cxx
	sd/source/ui/view/drviews7.cxx
	sd/source/ui/view/drviewsb.cxx

(cherry picked from commit b1cf64fe51fd0bb1e9bc8c3bb38d5cc7254d8d5f)

Conflicts:
	sd/source/ui/accessibility/AccessibleDocumentViewBase.cxx
	sd/source/ui/view/drviews3.cxx
	sd/source/ui/view/drviews7.cxx

Change-Id: I86bb17bf422356247a319f89e54d1ead97b368b8
Reviewed-on: https://gerrit.libreoffice.org/9654
Tested-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Michael Stahl <mstahl@redhat.com>